--- a/modular_programing/ex0/ex0.vcxproj
+++ b/modular_programing/ex0/ex0.vcxproj
@@ -20,7 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ex0a.cpp" />
-    <ClCompile Include="ex0b.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -28,6 +27,7 @@
     <ProjectGuid>{27450d20-75c3-46c1-864c-a2a3adee9f9e}</ProjectGuid>
     <RootNamespace>ex0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ex0a</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
