--- a/modular_programing/ex0b/ex0b.vcxproj
+++ b/modular_programing/ex0b/ex0b.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ex0\ex0b.cpp" />
+    <ClCompile Include="ex0b.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
